CMakeLists for rans_komega0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ ENDIF()
 # Equation system
 # =========================================================================
 SET(FLEXI_EQNSYSNAME "navierstokes" CACHE STRING
-                     "Used equation system (navierstokes/linearscalaradvection/rans_sa/rans_kg)")
+                     "Used equation system (navierstokes/linearscalaradvection/rans_sa/rans_kg/rans_komega0)")
 SET_PROPERTY(CACHE FLEXI_EQNSYSNAME  PROPERTY STRINGS ${EQNSYSTEMS})
 IF(    FLEXI_EQNSYSNAME STREQUAL "navierstokes")
   ADD_DEFINITIONS(-DPP_nVar=5 -DPP_nVarPrim=6 -DEQNSYSNR=2)
@@ -47,6 +47,9 @@ ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_sa")
   SET(WITHEOS 1)
 ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_kg")
   ADD_DEFINITIONS(-DPP_nVar=7 -DPP_nVarPrim=8 -DEQNSYSNR=4)
+  SET(WITHEOS 1)
+ELSEIF(FLEXI_EQNSYSNAME STREQUAL "rans_komega0")
+  ADD_DEFINITIONS(-DPP_nVar=7 -DPP_nVarPrim=8 -DEQNSYSNR=5)
   SET(WITHEOS 1)
 ELSE()
   MESSAGE(SEND_ERROR "Unknown equation system.")
@@ -64,14 +67,15 @@ ENDIF()
 OPTION(FLEXI_SPLIT_DG "Use split DG formulation" OFF)
 CMAKE_DEPENDENT_OPTION(FLEXI_PROLONG_ENTROPY "Prolong on entropy variables" ON
 	                     "FLEXI_SPLIT_DG; FLEXI_EQNSYSNAME STREQUAL navierstokes; FLEXI_NODETYPE STREQUAL GAUSS" ON
-                       "FLEXI_SPLIT_DG; FLEXI_EQNSYSNAME STREQUAL rans_kg;      FLEXI_NODETYPE STREQUAL GAUSS" ON)
+                       "FLEXI_SPLIT_DG; FLEXI_EQNSYSNAME STREQUAL rans_kg;      FLEXI_NODETYPE STREQUAL GAUSS" ON
+                       "FLEXI_SPLIT_DG; FLEXI_EQNSYSNAME STREQUAL rans_komega0; FLEXI_NODETYPE STREQUAL GAUSS" ON)
 IF(FLEXI_SPLIT_DG)
   ADD_DEFINITIONS(-DSPLIT_DG)
   IF(FLEXI_PROLONG_ENTROPY)
     ADD_DEFINITIONS(-DPP_EntropyVars)
   ENDIF()
-  IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg")))
-    MESSAGE(SEND_ERROR "FLEXI_SPLIT_DG only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg.")
+  IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg") OR (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")))
+    MESSAGE(SEND_ERROR "FLEXI_SPLIT_DG only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg or rans_komega0.")
   ENDIF()
 ENDIF()
 
@@ -84,8 +88,8 @@ IF(FLEXI_PP_LIMITER)
   IF(FLEXI_NODETYPE STREQUAL "GAUSS")
     MESSAGE(WARNING "Positivity Preserving Limiter only works on volume interpolation points. Positivity on faces is not guaranteed with FLEXI_NODETYPE==GAUSS." )
   ENDIF()
-  IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg")))
-    MESSAGE(SEND_ERROR "FLEXI_PP_LIMITER only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg.")
+  IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg") OR (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")))
+    MESSAGE(SEND_ERROR "FLEXI_PP_LIMITER only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg or rans_komega0.")
   ENDIF()
 ENDIF()
 
@@ -129,7 +133,7 @@ IF (FLEXI_PARABOLIC)
   ENDIF()
 
   # Set the law for viscosity
-  IF((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_sa") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg"))
+  IF((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_sa") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg") OR (FLEXI_EQNSYSNAME STREQUAL "rans_komega0"))
     SET(FLEXI_VISCOSITY "constant" CACHE STRING "Method to calculate viscosity (constant/sutherland/powerlaw)")
     SET_PROPERTY(CACHE FLEXI_VISCOSITY PROPERTY STRINGS constant sutherland powerlaw)
     IF(    FLEXI_VISCOSITY STREQUAL "constant")
@@ -152,6 +156,9 @@ ELSE()
   IF (FLEXI_EQNSYSNAME STREQUAL "rans_kg")
     MESSAGE(SEND_ERROR "rans_kg cannot work with FLEXI_PARABOLIC=OFF.")
   ENDIF()
+  IF (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")
+    MESSAGE(SEND_ERROR "rans_komega0 cannot work with FLEXI_PARABOLIC=OFF.")
+  ENDIF()
 ENDIF()
 
 # =========================================================================
@@ -161,7 +168,7 @@ CMAKE_DEPENDENT_OPTION(FLEXI_EDDYVISCOSITY "Enable eddy viscosity modells" OFF
                                            "FLEXI_PARABOLIC"               OFF)
 IF (FLEXI_EDDYVISCOSITY)
   ADD_DEFINITIONS(-DEDDYVISCOSITY=1)
-  IF (NOT FLEXI_EQNSYSNAME STREQUAL "rans_kg" AND FLEXI_2D)
+  IF (NOT ((FLEXI_EQNSYSNAME STREQUAL "rans_kg") OR (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")) AND FLEXI_2D)
     IF (FLEXI_EQNSYSNAME STREQUAL "navierstokes")
       MESSAGE(WARNING "FLEXI_EDDYVISCOSITY is enabled, only defaultEddyViscosity should be run.")
     ELSE()
@@ -172,6 +179,9 @@ ELSE()
   ADD_DEFINITIONS(-DEDDYVISCOSITY=0)
   IF (FLEXI_EQNSYSNAME STREQUAL "rans_kg")
     MESSAGE(SEND_ERROR "rans_kg cannot work with FLEXI_EDDYVISCOSITY=OFF.")
+  ENDIF()
+  IF (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")
+    MESSAGE(SEND_ERROR "rans_komega0 cannot work with FLEXI_EDDYVISCOSITY=OFF.")
   ENDIF()
 ENDIF()
 
@@ -200,8 +210,8 @@ IF(NOT (FLEXI_FV STREQUAL "OFF"))
   IF(   FLEXI_FV STREQUAL "SWITCH")
     ADD_DEFINITIONS(-DFV_ENABLED=1)
   ELSEIF(FLEXI_FV STREQUAL "BLEND")
-    IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg")))
-      MESSAGE(SEND_ERROR "FLEXI_FV=BLEND only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg.")
+    IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg") OR (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")))
+      MESSAGE(SEND_ERROR "FLEXI_FV=BLEND only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg or rans_komega0.")
     ELSEIF(FLEXI_NODETYPE STREQUAL "GAUSS")
       IF (FLEXI_PROLONG_ENTROPY)
         MESSAGE(SEND_ERROR "FLEXI_FV=BLEND with EntropyVars=ON only works on FLEXI_NODETYPE==GAUSS-LOBATTO points.")
@@ -209,8 +219,8 @@ IF(NOT (FLEXI_FV STREQUAL "OFF"))
     ENDIF()
     ADD_DEFINITIONS(-DFV_ENABLED=2)
   ELSEIF(FLEXI_FV STREQUAL "SBLEND")
-    IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg")))
-      MESSAGE(SEND_ERROR "FLEXI_FV=SBLEND only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg.")
+    IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "navierstokes") OR (FLEXI_EQNSYSNAME STREQUAL "rans_kg") OR (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")))
+      MESSAGE(SEND_ERROR "FLEXI_FV=SBLEND only works for FLEXI_EQNSYSNAME==navierstokes or rans_kg or rans_komega0.")
     ELSEIF(FLEXI_NODETYPE STREQUAL "GAUSS")
       MESSAGE(SEND_ERROR "FLEXI_FV=SBLEND only works on FLEXI_NODETYPE==GAUSS-LOBATTO points.")
     ENDIF()
@@ -266,8 +276,8 @@ OPTION(FLEXI_LOCALTIMESTEPPING "Enable local time stepping" OFF)
 
 IF(FLEXI_LOCALTIMESTEPPING)
    ADD_DEFINITIONS(-DLTS_ENABLED)
-   IF(NOT(FLEXI_EQNSYSNAME STREQUAL "rans_kg"))
-      MESSAGE(SEND_ERROR "local time stepping is only developed for FLEXI_EQNSYSNAME=rans_kg.") 
+   IF(NOT ((FLEXI_EQNSYSNAME STREQUAL "rans_kg") OR (FLEXI_EQNSYSNAME STREQUAL "rans_komega0")))
+      MESSAGE(SEND_ERROR "local time stepping is only developed for FLEXI_EQNSYSNAME=rans_kg or rans_komega0.") 
    ELSE() 
       MESSAGE(STATUS"Local time stepping is enabled")
    ENDIF()
